@@ -55,14 +55,17 @@ $gzip = '/bin/gzip';
 
 # Location of the cvs binary.
 #$cvs = 'c:/Program Files/GNU/WinCvs 1.3/CVSNT/cvs.exe';
+#$cvs = 'c:/Program Files/cvsnt/cvs.exe';
 $cvs = '/usr/bin/cvs';
 
 # Location of the svn binary.
 #$svn = 'c:/Program Files/SVN/svn.exe';
+#$svn = 'c:/Program Files/svn-win32-1.4.4/bin/svn.exe';
 $svn = '/usr/bin/svn';
 
 # Location of the ssh binary.  This is only required if a CVS :ext
 # type repository is used.
+#$ssh='c:/Program Files/OpenSSH/bin/ssh.exe';
 $ssh = '/usr/local/bin/ssh';
 
 # Location of the p4 (Perforce client) binary.  This does not need to be set
@@ -80,7 +83,7 @@ $vss = 'C:/Program Files/Microsoft Visual Studio/VSS/win32/ss.exe';
 # directory here that exists on the system.  For *NIX platforms, there is
 # usually no need to do anything here.
 #$tmpdir = '/tmp/codestriker';
-#$tmpdir = 'c:/codestriker temp';
+#$tmpdir = 'c:/temp';
 
 # If codestriker is installed differently to that described in the README file
 # (for example on the sourceforge servers), it may be necessary to explicitly
@@ -103,6 +106,7 @@ $codestriker_css = '';
 # connect to the repository.
 @valid_repositories =
     (
+     'svn://svn.openchange.org/openchange/trunk',
      # Example CVSROOT of a CVS repository on the same machine as the
      # codestriker server.
      '/home/sits/cvs',
@@ -111,6 +115,9 @@ $codestriker_css = '';
      # installation (CVS web is also supported), followed by the
      # CVSROOT of the repository.
      'http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot',
+
+     # Codestriker pserver repository.
+     ':pserver:anonymous:@codestriker.cvs.sourceforge.net:/cvsroot/codestriker',
 
      # The next example is the syntax used for specifying a Subversion
      # repository, which is simply the subversion repository URL
@@ -186,6 +193,7 @@ $codestriker_css = '';
      # followed by the view name, followed by the location where the
      # view is loaded.
      # 'clearcase:dyn:viewname:/vobs'
+     # 'clearcase:dyn:viewname:P:\\viewname'
     );
 
 # A mapping of repository URLs to names.  In any screen where a
@@ -344,17 +352,22 @@ $email_send_options =
 # can be changed dynamically on the view topic screen.
 $default_tabwidth = 8;
 
-# Bug database to update.  Currently, Bugzilla and Flyspray are
-# supported, but it is straight-forward to support other bug
+# Bug database to update.  Currently, Bugzilla, Flyspray and TestDirector
+# are supported, but it is straight-forward to support other bug
 # databases.  To enable Bugzilla, set $bug_db to "bugzilla", and set
-# the following parameters to your setup.  To enable Flysprat, set
-# $bug_db to "flyspray", and set the relevant parameters.
-# if the $bug_db is an empty string, all bug-tracking related
-# features will be disabled.
+# the following parameters to your setup.  To enable Flyspray, set
+# $bug_db to "flyspray", and set the relevant parameters.  To enable
+# TestDirectory, set $bug_db to "testdirector" and set the relevant
+# parameters.  If the $bug_db is an empty string, all bug-tracking related
+# features will be disabled.  To allow the association of a bug ID
+# with a topic, without any physical connection to a bug database,
+# set the value to "noconnection".
 
 $bug_db = '';
 #$bug_db = 'bugzilla';
 #$bug_db = 'flyspray';
+#$bug_db = 'testdirector';
+$bug_db = 'noconnection';
 
 # Bugzilla database connection details.
 #$bug_db_host = 'localhost';
@@ -370,12 +383,20 @@ $bug_db = '';
 #$flyspray_db_dbname = 'flyspray_dev';
 #$flyspray_db_user_id = 50;
 
+# TestDirector connection details
+#$testdirector_url = 'http://emea-testdir:8080/qcbin';
+#$testdirector_user_id = 'robh';
+#$testdirector_password = '';
+#$testdirector_domain = 'DEFAULT';
+#$testdirector_project = 'BPM33';
+#$testdirector_file_list = 'BG_USER_29';
+
 # The URL to the bug tracking system.  The bug number is appended to the
 # end of this string when URLs are generated.  This can be left blank if
 # there is no need for bug-tracking integration.  Below are some example
 # URLs for Bugzilla and Flyspray.
 $bugtracker = '';
-#$bugtracker = 'http://localhost.localdomain/bugzilla/show_bug.cgi?id=';
+$bugtracker = 'http://localhost.localdomain/bugzilla/show_bug.cgi?id=';
 #$bugtracker = '/flyspray_dev/?do=details&id=';
 
 # LXR database.  Each repository can be optionally mapped to a
@@ -405,7 +426,7 @@ $lxr_map =
 # (compatible with ASCII) if not set, but this can be over-ridden here.
 # List of example encoding names can be retrieved from the following
 # URL: http://perldoc.perl.org/Encode/Supported.html.
-#$topic_text_encoding = 'utf8';
+$topic_text_encoding = 'utf8';
 #$topic_text_encoding = 'gb2312';
 
 # Each comment thread (or issue) that is created against a specific
